; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_dv1394.c_dv1394_fasync.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_dv1394.c_dv1394_fasync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.video_card = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.file*, i32)* @dv1394_fasync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dv1394_fasync(i32 %0, %struct.file* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.video_card*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.file* %1, %struct.file** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.file*, %struct.file** %5, align 8
  %9 = call %struct.video_card* @file_to_video_card(%struct.file* %8)
  store %struct.video_card* %9, %struct.video_card** %7, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.file*, %struct.file** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.video_card*, %struct.video_card** %7, align 8
  %14 = getelementptr inbounds %struct.video_card, %struct.video_card* %13, i32 0, i32 0
  %15 = call i32 @fasync_helper(i32 %10, %struct.file* %11, i32 %12, i32* %14)
  ret i32 %15
}

declare dso_local %struct.video_card* @file_to_video_card(%struct.file*) #1

declare dso_local i32 @fasync_helper(i32, %struct.file*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
